# alauda-confluence-mcp

./: README.md  pyproject.toml
src/alauda_confluence_mcp/: __init__.py  server.py
